Bug 776429: Unify scattered M_PI definitions into mfbt/Constants.h r=dRdR