gfx/2d/Blur.cpp
@@ -9,11 +9,8 @@
 #include <string.h>
 
 #include "mozilla/CheckedInt.h"
+#include "mozilla/Constants.h"
 #include "mozilla/Util.h"
-
-#ifndef M_PI
-#define M_PI 3.14159265358979323846
-#endif
 
 using namespace std;
 
