gfx/layers/ipc/AsyncPanZoomController.cpp
@@ -6,6 +6,7 @@
 
 #include "CompositorParent.h"
 #include "mozilla/gfx/2D.h"
+#include "mozilla/Constants.h"
 #include "mozilla/Util.h"
 #include "mozilla/XPCOM.h"
 #include "mozilla/Monitor.h"
@@ -17,10 +18,6 @@
 
 namespace mozilla {
 namespace layers {
-
-#ifndef M_PI
-#define M_PI 3.14159265358979323846
-#endif
 
 static const float EPSILON = 0.0001;
 
